--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dependencies": {
         "bootstrap-icons": "^1.10.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "swiper": "^9.2.2"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^2.1.0",
