--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-    "name": "store",
-    "version": "1.0.0",
-    "description": "",
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "default": "index.html",
+    "name": "fashion",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
     "dependencies": {
-        "bootstrap-icons": "^1.10.2",
+        "bootstrap-icons": "^1.9.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "swiper": "^9.2.2"
     },
     "devDependencies": {
-        "@vitejs/plugin-react": "^2.1.0",
-        "eslint": "^8.29.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-react": "^7.31.11",
+        "@types/react": "^18.0.37",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
+        "@vitejs/plugin-react": "^4.0.0",
+        "eslint": "^8.38.0",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "prettier": "^2.8.0",
-        "process": "^0.11.10",
-        "vite": "^3.1.4"
-    },
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview",
-        "format": "prettier --write \"src/**/*.{js,jsx}\"",
-        "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
+        "eslint-plugin-react-refresh": "^0.3.4",
+        "prettier": "^2.8.8",
+        "sass": "^1.63.6",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.9"
     },
     "browserslist": {
         "production": [
