--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "bootstrap-icons": "^1.9.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "swiper": "^9.2.2"
+        "swiper": "^9.2.2",
+        "workbox-sw": "^7.0.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.37",
