--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
         "prettier": "^2.8.8",
         "sass": "^1.63.6",
         "typescript": "^5.0.2",
-        "vite": "^4.3.9"
+        "vite": "^4.3.9",
+        "workbox-build": "^7.0.0",
+        "workbox-core": "^7.0.0",
+        "workbox-routing": "^7.0.0",
+        "workbox-strategies": "^7.0.0"
     },
     "browserslist": {
         "production": [
