Typescript service worker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["src", "service-worker.js"],
+    "include": ["src", "service-worker.ts"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
