--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "bootstrap-icons": "^1.9.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-lazy-load-image-component": "^1.6.0",
         "swiper": "^9.2.2",
         "workbox-sw": "^7.0.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
+        "@types/react-lazy-load-image-component": "^1.5.3",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "@vitejs/plugin-react": "^4.0.0",
